[core] Allow empty values for rule properties
Fixes #4279